--- a/src/components/Nav/Items/NavItems.module.css
+++ b/src/components/Nav/Items/NavItems.module.css
@@ -1,6 +1,23 @@
 .NavItems {
-    width: 100%;
-    height: 100vh;
-    background: var(--Black);
+    background: black;
     z-index: 5;
+    padding: 0;
 }
+
+.NavItemIcon {
+    margin-right: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.NavItemIcon > svg {
+    color: white;
+    width: 30px;
+}
+
+.NavItemName {
+    background-color: transparent;
+    color: white;
+}
+
