--- a/src/components/Nav/Web/TopBar.module.css
+++ b/src/components/Nav/Web/TopBar.module.css
@@ -1,39 +1,30 @@
 .NavHeader {
-    width: auto;
-    max-height: 5rem;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
-    background-color: var(--Black);
+  width: auto;
+  max-height: 5rem;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background-color: var(--Black);
 }
 
-.NavArrows>button>svg {
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0.2rem 0;
+.NavArrows > button > svg {
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.2rem 0;
 }
 
 .NavLeftArrow,
 .NavRightArrow {
-    border-radius: 50%;
-    background-color: var(--DarkGray);
-    margin: 0 0.2rem;
+  border-radius: 50%;
+  background-color: var(--DarkGray);
+  margin: 0 0.2rem;
 }
 
-.NavSignup {
-    text-transform: uppercase;
-    font-size: 0.8em;
-    font-weight: bold;
-    color: white;
-}
-
-
-.NavRightArrow>svg:hover,
-.NavLeftArrow>svg:hover,
-.NavSignup:hover {
-    color: var(--Green);
+.NavRightArrow > svg:hover,
+.NavLeftArrow > svg:hover {
+  color: var(--Green);
 }
