--- a/src/components/Footer/PlaybarFooter/PlaybarFooter.module.css
+++ b/src/components/Footer/PlaybarFooter/PlaybarFooter.module.css
@@ -9,5 +9,160 @@
     border-top: 1px solid black;
     cursor: pointer;
     z-index: 1;
-  }
-  
+}
+
+.FooterSong {
+    width: 25%;
+}
+
+.FooterPlaybar {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.FooterActions {
+    width: 25%;
+}
+
+.PlayActions {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.PlayActions svg {
+    color: var(--LightGray);
+    width: 20px;
+}
+
+.PlayBtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    border-radius: 50%;
+    background-color: white;
+    margin: 0 0.5rem;
+}
+
+.PlayActions > button {
+    width: 35px;
+    height: 35px;
+}
+
+.PlayBtn svg {
+    color: black;
+}
+
+.PlayActions > button:hover svg {
+    width: 18px;
+}
+
+.Playbar {
+    width: 80%;
+    display: flex;
+    align-items: center;
+    margin-top: 1rem;
+}
+
+.Playbar > span {
+    width: 10%;
+    color: var(--LightGray);
+    font-size: 12px;
+    margin: 0 0.5rem;
+}
+
+.SoundProgressbar {
+    width: 100%;
+    height: 7px;
+    -webkit-appearance: none;
+    background: transparent;
+}
+
+.SoundProgressbar:focus {
+    outline: none;
+}
+
+.SoundProgressbar::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 7px;
+    cursor: pointer;
+    background: rgba(179, 179, 179, 0.2);
+    border-radius: 5px;
+}
+
+.SoundProgressbar::-webkit-slider-thumb {
+    height: 12px;
+    width: 12px;
+    border-radius: 15px;
+    cursor: pointer;
+    background: white;
+    -webkit-appearance: none;
+    margin-top: -3px;
+}
+
+.SoundProgressbar:focus::-webkit-slider-runnable-track {
+    background: rgba(179, 179, 179, 0.2);
+}
+
+.SoundProgressbar::-moz-range-track {
+    width: 100%;
+    height: 7px;
+    cursor: pointer;
+    background: rgba(179, 179, 179, 0.2);
+    border-radius: 5px;
+}
+
+.SoundProgressbar::-moz-range-thumb {
+    height: 12px;
+    width: 12px;
+    border-radius: 15px;
+    cursor: pointer;
+    background: white;
+    -webkit-appearance: none;
+    margin-top: -3px;
+}
+
+.SoundProgressbar::-ms-track {
+    width: 100%;
+    height: 7px;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+
+.SoundProgressbar::-ms-thumb {
+    height: 12px;
+    width: 12px;
+    border-radius: 15px;
+    cursor: pointer;
+    background: white;
+    -webkit-appearance: none;
+    margin-top: -3px;
+}
+
+.SoundProgressbar::-ms-fill-lower {
+    background: rgba(179, 179, 179, 0.2);
+    border-radius: 5px;
+}
+.SoundProgressbar::-ms-fill-upper {
+    background: rgba(179, 179, 179, 0.2);
+    border-radius: 5px;
+}
+
+.SoundProgressbar:focus::-ms-fill-lower {
+    color: var(--Green);
+}
+
+.SoundProgressbar:focus::-ms-fill-upper {
+    background: rgba(179, 179, 179, 0.2);
+}
+
+.SoundProgressbar::-moz-range-progress {
+    height: 7px;
+    color: var(--Green);
+}
