--- a/src/components/Nav/Web/Sidebar.module.css
+++ b/src/components/Nav/Web/Sidebar.module.css
@@ -10,6 +10,7 @@
 
 .NavLogo {
   padding: 2rem;
+  cursor: pointer;
 }
 
 .NavLogo > img {
@@ -61,22 +62,4 @@
 
 .PlaylistItem:hover {
   color: white;
-}
-
-.UserPlaylists::-webkit-scrollbar {
-  width: 13px;
-}
-
-.UserPlaylists::-webkit-scrollbar-track {
-  background-color: transparent;
-}
-
-.UserPlaylists::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); 
-  background-color: var(--Gray);
-  height: 50%;
-}
-
-.UserPlaylists::-webkit-scrollbar-thumb:hover {
-  background-color: var(--LightGray);
 }
