--- a/src/components/PlaylistsRow/PlaylistsRow.module.css
+++ b/src/components/PlaylistsRow/PlaylistsRow.module.css
@@ -16,3 +16,13 @@
     overflow-y: hidden;
     margin: 1rem 0;
 }
+
+.ExpandedPlaylistRow {
+    grid-column-gap: 24px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(var(--minimumColumnWidth),1fr));
+    grid-auto-rows: auto;
+    grid-template-rows: 1fr;
+    overflow-y: hidden;
+    margin: 1rem 0;
+}
