--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,21 @@ a {
   text-decoration: none;
   color: white;
 }
+
+::-webkit-scrollbar {
+  width: 13px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: var(--Gray);
+  height: 50%;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--LightGray);
+}
