--- a/src/components/Home/Mobile/Home.module.css
+++ b/src/components/Home/Mobile/Home.module.css
@@ -8,13 +8,15 @@
 }
 
 .TopBar {
+  z-index: 6;
   grid-area: 1 / 1 / 2 / 2;
 }
 
 .Browse {
   height: auto;
-  grid-area: 2 / 1 / 3 / 1;
-  background-color: var(--DarkGray);
+  grid-area: 1 / 1 / 3 / 1;
+  background: var(--Black);
+  transition: background 1s ease;
   overflow-y: scroll;
 }
 
