--- a/src/components/Nav/Mobile/Topbar.module.css
+++ b/src/components/Nav/Mobile/Topbar.module.css
@@ -3,7 +3,7 @@
     max-height: 100vh;
     display: flex;
     flex-direction: column;
-    background-color: black;
+    background-color: transparent;
     z-index: 1;
 }
 
@@ -42,6 +42,7 @@
 .NavItems {
     width: 100%;
     height: 100vh;
+    background: var(--Black);
 }
 
 .NavItem {
