--- a/src/components/PlaylistDetails/PlaylistDetails.module.css
+++ b/src/components/PlaylistDetails/PlaylistDetails.module.css
@@ -2,4 +2,42 @@
     width: 100%;
     height: 100%;
     overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: flex-start;
+    padding-top: 5rem;
+}
+
+.ContentSpacing {
+    padding: 1rem 1.5rem;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.PlayingBtn {
+    width: 56px;
+    height: 56px;
+    border-radius: 50%;
+    background: var(--Green);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.PlayingBtn>svg {
+    color: white;
+    width: 25px;
+    height: 25px;
+}
+
+.PlayingBtn:hover>svg{
+    width: 20px;
+    height: 20px;
+}
+
+@media screen and (min-width: 1024px) {
+    .PlaylistItemsContainer {
+        padding-top: 0;
+    }
 }
