--- a/src/components/Home/Web/Home.module.css
+++ b/src/components/Home/Web/Home.module.css
@@ -16,7 +16,7 @@
 .TopBar {
   z-index: 6;
   grid-area: 1 / 2 / 2 / 3;
-  background-color: rgb(124, 109, 232);
+  background-color: var(--Black);
   background-image: linear-gradient(rgba(0,0,0,.6) 0,rgba(0,0,0,.6) 100%),var(--backgroundNoise);
   transition: background 1s ease;
 }
