--- a/src/components/Nav/Mobile/Topbar.module.css
+++ b/src/components/Nav/Mobile/Topbar.module.css
@@ -3,7 +3,7 @@
     max-height: 100vh;
     display: flex;
     flex-direction: column;
-    background-color: transparent;
+    background-color: var(--Black);
     z-index: 1;
 }
 
